# Rust-QuizzicalAPI

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.development.yml
src/: controllers.rs  main.rs  models.rs  registry.rs  repositories.rs  responses.rs  services.rs
