[package]
name = "quizzical"
version = "0.1.0"
authors = ["Waqqas Sheikh <waqqas.abdulkareem@gmail.com>"]

[dependencies]
hyper = "0.12.9"
futures = "0.1.23"
futures-cpupool = "0.1.8"
postgres = "0.15"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
url = "1.7.1"
log = "0.4.6"
simple_logger = "1.0.1"
tokio-io-pool = "0.1.5"
juniper = "0.10.0"
juniper_hyper = "0.1.0"
juniper_codegen = "0.10.0"
md-5 = "0.8.0"
uuid = { version = "0.7", features = ["v4"] }